--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -2,7 +2,13 @@ repository_type: pipeline
 
 nf_core_version: 3.2.0
 
-lint: {}
+lint:
+  multiqc_config: False
+  included_configs: False
+  files_exist: 
+    - assets/email_template.html
+    - assets/email_template.txt
+
 
 template:
   org: nf-core
